tools/hrw4u/tests/data/vars/typos.fail.error.txt
tests/data/vars/typos.fail.input.txt:2:7: error: Unknown condition symbol
   2 |     if inound.req.X-Foo ~ /foo/ {
     |        ^
